--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^7.5.1",
     "@mantine/dropzone": "^7.5.1",
     "@mantine/hooks": "^7.5.1",
+    "@tabler/icons-react": "^2.47.0",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
